--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,4 @@
 eureka:
-   client:
-      serviceUrl: defaultZone=http://localhost:8761/eureka/
+  client:
+    service-url:
+      defaultZone: "http://localhost:8761/eureka/"
